# rag-mendelu

./: .gitignore  CLAUDE.md  ChromaDbModel.py  ChromaService.py  Dockerfile  Makefile  README.md  TextEmbeddingService.py  constants.py  docker-compose.yaml  main.py  prompt_to_analyze_tests.md  pyproject.toml  qdrant_config.yaml  requirements.txt  run_etl.py  run_tests.sh
data/: README.md  mzdy_cz_nace_rocni_csu.csv  mzdy_naklady_rocni_csu.csv
data/csu/: MZDR_1_data.csv  README.md
data/drough/: 10.1175_2023BAMSStateoftheClimate.2.md  10.1175_2024BAMSStateoftheClimate.2.md  ESOTC-2024-report.md  Provisional_State_of_the_Climate_2022_en.md  README.md  State of the Global Climate 2024_Extremes Supplement.md  WMO-1368-2025_en.md
data/general/: 1347_Global-statement-2023_en.md  README.md  SotC2024.md  Statement_2022.md  World Drought Atlas 2024.md  dinosaurs.md  hussite_wars.md  lotr_lore.md
data/input/: history_of_metal.md
data/random/: games_2025.csv  games_2026.csv  hussite_wars.pptx
data/sql/: tabular.duckdb
data/witcher_md/: baptism_of_fire.md  blood_of_elves.md  lady_of_the_lake.md  sword_of_destiny.md  the_last_wish.md  the_tower_of_swallows.md  time_of_contempt.md
database/: ChromaDbRepository.py  DuckDbRepository.py  QdrantDbRepository.py  SqlDbRepository.py  WeaviateDbRepository.py  duck_db_repository.py  qdrant_db_repository.py
database/base/: BaseDbRepository.py  DbOperationResult.py  DbRepositoryFactory.py  Document.py  MyDocument.py  base_db_repository.py  db_operation_result.py
etl/: BaseEtl.py  DroughEtl.py  GeneralEtl.py  Mzdr1DataEtl.py  MzdyCzNaceRocniCsuEtl.py  base_etl.py  converters.py  etl_state.py  general_etl.py  loaders.py  table_extractor.py
llm_handler/: LLMHandler.py
metadata_extractor/: LLMMetadataExtractor.py  enums.py  graph.py  models.py  nodes.py  prompts.py  state.py
metadata_extractor/models/: DroughMetadata.py
rag/: AgenticRAG.py  HybridRetriever.py  RAG.py  Retriever.py  agentic_rag.py
rag/agents/: enums.py  graph.py  models.py  prompts.py  (+1 more)
semantic_chunking/: sentence_similarity.py  sentence_splitter.py  similiar_sentence_splitter.py
tests/: questions.json
text_embedding/: __init__.py  base.py  fastembed_library.py  models.py  sentence_transformers_library.py  sparse_library.py  text_embedding_service.py
text_embedding_api/: Dockerfile  TextEmbeddingService.py  requirements.txt
text_embedding_api/app/backend/: Dockerfile  EmbeddingModelService.py  EmbeddingServiceManager.py  app.py  models.py  pyproject.toml  requirements.txt  utils.py
text_embedding_api/app/backend/chunking/: SentenceSimiliarity.py  SimilarSentenceSplitter.py
text_embedding_api/app/backend/embedding/: EmbeddingModelService.py  EmbeddingServiceManager.py  FastEmbeddingModelService.py  SparseEmbeddingService.py
tui/: chat.py  tui.py
utils/: logging_config.py  utils.py
(+25 files in other folders)
