[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "en-core-web-sm",
    "fastapi[standard]>=0.128.0",
    "fastembed>=0.7.4",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
